# flakes

./: flake.nix
templates/haskell/rio/: .gitignore  LICENSE  README.md  flake.nix  my_project.cabal  package.yaml
templates/haskell/rio/app/: Main.hs
templates/haskell/rio/app/Drivers/: Cli.hs
templates/haskell/rio/src/: Import.hs  MyProject.hs  Run.hs  Types.hs  Util.hs
templates/haskell/rio/test/: UtilSpec.hs
templates/ocaml/dune-project/: flake.nix
templates/typescript/bun/: flake.nix
