name:           my-project
version:        0.0.1
cabal-version:  1.12
build-type:     Simple

library my-project-lib
  exposed-modules:
    MyProject
    Import
    Types
    Util
  default-extensions:
    ImportQualifiedPost
    NoImplicitPrelude
    OverloadedStrings
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base ==4.*,
    rio

executable my-project-exe
  main-is: Main.hs
  hs-source-dirs: app
  other-modules:
    Paths_my_project
    Drivers.Cli
  build-depends:
    my-project-lib,
    base ==4.*,
    optparse-simple,
    rio
  default-language: Haskell2010

Test-Suite my-project-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    UtilSpec
  build-depends:
    my-project-lib,
    base ==4.*,
    hspec,
    hspec-discover
